--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 	</head>
     <body>
         <h1>Let's play<br><span id="Hot">Hot</span> or <span id="Cold">Cold!</span></br></h1>
+
     <div id="main-container">
         <div id="responses">
             <h2 id="feedback">Select a number between 1 and 100.</h2>
         </div>
-            <div id="inputField">
+
+        <form id="inputField">
     	       <input type="text" id="text"></input>
     	       <button name="submit" type="submit">SUBMIT</button>
-        </div>
+        </form>
+
     	<div id="pastGuesses">
     		<ul>
     			<li id="listHeader">GUESSES</li>
