--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     	       <button name="submit" type="submit">SUBMIT</button>
         </form>
 
-    	<div id="pastGuesses">
-    		<ul>
+    	<div id="Guesses">
+    		<ul id ="pastGuesses">
     			<li id="listHeader">GUESSES</li>
 
     		</ul>
