--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         </form>
 
     	<div id="Guesses">
+                <p id="listHeader">GUESSES</p>
     		<ul id ="pastGuesses">
-    			<li id="listHeader">GUESSES</li>
 
     		</ul>
     	</div>
