--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
     <div id="main-container">
         <div id="responses">
-            <h2 id="feedback">Select a number between 1 and 100.</h2>
+            <h2 id="feedback">Select a number between 1 and 100, then press ENTER.</h2>
         </div>
 
         <form id="inputField">
     	       <input type="text" id="text"></input>
-    	       <button name="submit" type="submit">SUBMIT</button>
+    	      <!-- <button name="submit" type="submit">SUBMIT</button>-->
         </form>
 
     	<div id="Guesses">
